<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        layout="@layout/text_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="none"
       >
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    android:text="@string/important_device"/>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    android:text="@string/report_test_radio"/>
		    <TextView 
		    android:id="@+id/fm_test_result"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    android:text="@string/report_test_bluetooth"/>
		    <TextView 
		    android:id="@+id/bt_test_result"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    android:text="@string/report_test_wifi"/>
		    <TextView 
		    android:id="@+id/wifi_test_result"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    android:text="@string/report_test_gps"/>
		    <TextView 
		    android:id="@+id/gps_test_result"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
		</LinearLayout>
		    <TextView 
		 android:layout_marginTop="20dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    android:background="@color/red"
	    android:text="@string/report_fail_title"/>
        <TextView 
		android:id="@+id/test_result_failed"          
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@color/red"
	    />
           <TextView 
		 android:layout_marginTop="20dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/black"
	    android:background="@android:color/white"
	    android:text="@string/report_nottested_title"/>
        <TextView 
		android:id="@+id/test_result_untest"          
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    />
           <TextView 
		 android:layout_marginTop="20dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/black"
	    android:background="@color/blue"
	    android:text="@string/report_pass_title"/>
        <TextView 
		android:id="@+id/test_result_success"          
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@color/blue"
	    />
	</LinearLayout>
	</ScrollView>
	  <Button
        android:layout_gravity="right|bottom"
        android:id="@+id/test_result_button"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:text="@string/but_exit" />
</LinearLayout>
