<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383838"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <VideoView
            android:id="@+id/videoview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/video_ok"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/test_ok"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play_pause_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/text_play"
            android:textStyle="bold" />

        <Button
            android:id="@+id/vidio_false"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/test_false"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>